--- a/index.html
+++ b/index.html
@@ -165,10 +165,10 @@
                 <img class="img float-left" src="images/illustration-phones.svg" alt="telefones_ilustração">
               </figure>
               
-              <div class="state border">
+              <div class="state ">
                 <h1>State of the Art Infrastructure</h1>
 
-                <p class="col-sm-12 border">
+                <p class="col-sm-12">
                   With reliability and speed in mind, worldwide data centers provide the backbone for ultra-fast connectivity. 
                   This ensures your site will load instantly, no matter where your readers are, keeping your site competitive.
                 </p>  
